<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imv_get"
        android:layout_width="@dimen/height_size"
        android:layout_height="@dimen/height_size"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/edt_namepackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/package_name"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/description_package"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/price_package"
        android:textSize="22sp" />

</LinearLayout>
